--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "food-chain-game-client",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://ramiteacher.github.io/food-chain-game",
+  "homepage": ".",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
